feat: fix bug get order by id and add delete an order
