# src/docs/swagger_output.json
@@ -1142,7 +1142,7 @@
         ]
       }
     },
-    "/orders/{id}": {
+    "/orders/{orderId}": {
       "get": {
         "tags": [
           "Order"
@@ -1150,7 +1150,33 @@
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "orderId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": ""
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "Order"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "orderId",
             "in": "path",
             "required": true,
             "schema": {
